# fuzzy-enigma

./: .gitignore
server/: .env  Cargo.toml
server/config/: config.toml  mail_auth_template.html
server/src/: cache.rs  config.rs  context.rs  db.rs  mail.rs  main.rs  result.rs  test.rs
server/src/algorithm/: arrange.rs  mod.rs
server/src/entity/: mod.rs  resource.rs  task.rs  user.rs
server/src/middleware/: auth.rs
server/src/repository/: ai.rs  mod.rs  resource.rs  task.rs  user.rs
server/src/router/: mod.rs  resource.rs  task.rs  user.rs
server/src/service/: ai.rs  resource.rs  task.rs  user.rs
server/src/utils/: file.rs  mod.rs
web/: package-lock.json  package.json  tailwind.config.js
web/src/: middleware.ts
web/src/api/: resource.ts  task.ts  user.ts
web/src/app/: Home.tsx  globals.css  layout.tsx  page.tsx  wrapper.tsx
web/src/app/resource/detail/: ResourceDetail.tsx  page.tsx
web/src/app/task/: TaskAttachmentForm.tsx  TaskInfoForm.tsx  TaskMemberForm.tsx
web/src/app/task/create/: TaskCreate.tsx  page.tsx
web/src/app/task/detail/: TaskDetailIndex.tsx  page.tsx
web/src/app/task/edit/: TaskEdit.tsx  (+1 more)
web/src/components/: Appbar.tsx  MarkdownPreview.tsx  NormalContainter.tsx  PageTitle.tsx  ResourceItem.tsx  TaskItem.tsx  UserAvatar.tsx  UserItem.tsx
web/src/components/page/: ErrorPageTemplate.tsx  NotFound.tsx
web/src/config/: index.ts  schema.ts  theme.ts
web/src/entity/: resource.ts  task.ts  user.ts
web/src/store/: context.ts
web/src/utils/: index.ts  task.ts  type.ts  url.ts
web/src/utils/request/: client.ts  server.ts
(+9 files in other folders)
