[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.78.0", features = ["oapi", "cors"] }
tokio = { version = "1.45.0", features = ["macros", "full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
clia-tracing-config = "0.2.7"
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
lettre = { version = "0.11.15", features = [
    "tokio1",
    "native-tls",
    "tokio1-native-tls",
] }
moka = { version = "0.12.10", features = ["future"] }
rand = { version = "0.9.1", features = ["os_rng"] }
md-5 = "0.10.6"
chrono = "0.4.41"
rand_chacha = "0.9.0"
validator = { version = "0.19", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
reqwest = { version = "0.12.15", features = ["json"] }
